adicionando teste de somar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<h1>teste</h1>
-<app-detalhe-noticia></app-detalhe-noticia>
+<div style="" class="divs">
+    <h1>Aplicação de testes em angular</h1>
+    <div class="divs">
+        <app-somar-teste></app-somar-teste>
+    </div>
+    
+</div>
