--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+.divs {
+    border: 1px solid;
+    width: 100%;
+    margin: .5em auto;
+    display: flex;
+    align-items: center;
+    flex-direction: center;
+    justify-content: center;
+    flex-direction: column;
+}
