--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
-<div style="" class="divs">
+<div class="divs">
     <h1>Aplicação de testes em angular</h1>
     <div class="divs">
         <app-somar-teste></app-somar-teste>
+    </div>
+    <div class="divs">
+       <app-variavel-test></app-variavel-test>
     </div>
     
 </div>
