--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,8 @@
     <div class="divs">
        <app-variavel-test></app-variavel-test>
     </div>
+    <div class="divs">
+        <app-observables></app-observables>
+     </div>
     
 </div>
